# BrumSchtick

./: AGENTS.md  AUTO_UPDATER.md  CHANGES_FROM_TRENCHBROOM.md  CI-linux.sh  CI-macos.sh  CI-windows.bat  CMakeLists.txt  Coding Standards.md  README.md  RELEASES.md  vcpkg.json  version.txt
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/cmake/: AddVersionToManual.cmake.in  AppImageGenerator.cmake.in  BrumSchtick.rc.in
app/resources/documentation/manual/: README.md  index.md  template.html
app/resources/documentation/misc/: GameConfig.md  Icons.md
app/resources/graphics/images/: credits.md
app/resources/linux/: brumschtick.desktop  postinst  prerm
app/resources/linux/icons/: rescale_images.sh
app/resources/mac/: BrumSchtick-Info.plist
app/resources/mac/icons/: AppIcon.icns
app/resources/shader/: Face.fragsh  Face.vertsh
app/src/: Main.cpp
cmake/: Utils.cmake
common/: CMakeLists.txt
common/src/: Contracts.cpp  PreferenceManager.cpp  PreferenceManager.h  Preferences.cpp  Preferences.h  TrenchBroomApp.cpp  TrenchBroomApp.h
common/src/io/: AssimpLoader.cpp  BspLoader.cpp  CompilationConfigParser.cpp  DefParser.cpp  DkmLoader.cpp  EntParser.cpp  EntityDefinitionParser.cpp  FgdParser.cpp  FgdParser.h  GameConfigParser.cpp  GameEngineConfigParser.cpp  HotspotRectParser.cpp  HotspotRectParser.h  LegacyModelDefinitionParser.cpp  LoadEntityDefinitions.cpp  LoadEntityModel.cpp  LoadMaterialCollections.cpp  LoadMaterialCollections.h  LoadShaders.cpp  MapFileSerializer.cpp  MapParser.h  MapReader.cpp  MapReader.h  Md2Loader.cpp  Md3Loader.cpp  MdlLoader.cpp  MdxLoader.cpp  NodeSerializer.cpp  ObjSerializer.cpp  ParseModelDefinition.h  ReadDdsTexture.cpp  ReadFreeImageTexture.cpp  ReadMipTexture.cpp  ReadWalTexture.cpp  StandardMapParser.cpp  StandardMapParser.h  SystemPaths.cpp  WorldReader.cpp
common/src/mdl/: Autosaver.cpp  BezierPatch.cpp  BezierPatch.h  EditorContext.cpp  EditorContext.h  Entity.cpp  Entity.h  EntityColorPropertyValue.cpp  EntityDefinitionFileSpec.cpp  EntityModel.cpp  EntityModelManager.cpp  EntityNode.cpp  EntityProperties.cpp  EntityProperties.h  EntityPropertiesVariableStore.cpp  EntityPropertiesVariableStore.h  GameConfig.h  GameFileSystem.cpp  GameFileSystem.h  GameManager.cpp  GameManager.h  Map.cpp  Map_Assets.cpp  Map_Brushes.cpp  Map_Brushes.h  Map_Entities.cpp  Map_Entities.h  Map_Geometry.cpp  Map_Geometry.h  Map_Groups.cpp  Map_Groups.h  Map_Selection.cpp  Map_World.cpp  Material.cpp  Material.h  MissingModValidator.cpp  ModelUtils.cpp  ModelUtils.h  Palette.cpp  PatchNode.cpp  (+7 more)
common/src/render/: BrushRenderer.cpp  BrushRenderer.h  BrushRendererArrays.h  BrushRendererBrushCache.cpp  BrushRendererBrushCache.h  EntityDecalRenderer.cpp  EntityModelRenderer.cpp  FaceRenderer.cpp  GL.cpp  GLVertexType.h  GroupRenderer.cpp  GroupRenderer.h  LightPreview.cpp  LightPreview.h  MapRenderer.cpp  PatchRenderer.cpp  PatchRenderer.h  RenderContext.cpp  RenderContext.h  SelectionBoundsRenderer.cpp
common/src/ui/: AboutDialog.cpp  ActionContext.cpp  ActionContext.h  Actions.cpp  AppInfoPanel.cpp  BrushBuilderTool.cpp  BrushBuilderTool.h  BrushBuilderToolController2D.cpp  BrushBuilderToolController2D.h  BrushBuilderToolController3D.cpp  BrushBuilderToolController3D.h  BrushBuilderToolPage.cpp  BrushBuilderToolPage.h  CameraTool2D.cpp  ClipTool.cpp  CompilationDialog.cpp  CompilationDialog.h  CompilationOutput.cpp  CompilationOutput.h  CompilationProfileManager.cpp  CompilationProfileManager.h  CompilationRunner.cpp  CrashDialog.cpp  CrashReporter.cpp  DrawShapeToolExtension.cpp  DrawShapeToolExtension.h  DrawShapeToolExtensions.cpp  DrawShapeToolExtensions.h  EntityBrowserView.cpp  EntityBrowserView.h  EntityPropertyGrid.cpp  EntityPropertyGrid.h  EntityPropertyModel.cpp  EntityPropertyModel.h  ExtrudeTool.cpp  FaceAttribsEditor.cpp  FaceAttribsEditor.h  GLContextManager.cpp  GameDialog.cpp  GameEngineDialog.cpp  (+44 more)
common/test/: CMakeLists.txt
common/test/src/: QtPrettyPrinters.h
common/test/src/catch/: tst_StringMakers.cpp
common/test/src/io/: tst_EntParser.cpp  tst_FgdParser.cpp  tst_GameConfigParser.cpp  tst_NodeWriter.cpp  tst_ObjSerializer.cpp  tst_PathQt.cpp  tst_WorldReader.cpp
common/test/src/mdl/: tst_Autosaver.cpp  tst_Entity.cpp  tst_EntityModel.cpp  tst_GameFileSystem.cpp  tst_GameManager.cpp  tst_Map_Brushes.cpp  tst_Map_Entities.cpp  tst_Selection.cpp
common/test/src/ui/: tst_EntityPropertyModel.cpp  tst_SelectionTool.cpp  tst_UpdateVersion.cpp
dump-shortcuts/: CMakeLists.txt
dump-shortcuts/src/: Main.cpp
lib/KdLib/include/kd/: string_utils.h
lib/TbBaseLib/: CMakeLists.txt  README.md
lib/TbBaseLib/include/: ColorComponentType.h  ColorT.h  ColorVariantT.h  Parser.h  Tokenizer.h
lib/TbBaseLib/test-utils/: README.md
lib/TbElLib/: CMakeLists.txt  README.md
lib/TbElLib/src/: ELParser.cpp  Exceptions.cpp  Expression.cpp  Interpolate.cpp  VariableStore.cpp
lib/TbElLib/test-utils/: README.md
lib/TbElLib/test/src/: tst_Expression.cpp
lib/TbFsLib/: CMakeLists.txt  README.md
lib/TbFsLib/include/fs/: DiskIO.h
lib/TbFsLib/src/: DiskFileSystem.cpp  DiskIO.cpp  File.cpp  FileSystem.cpp  ImageFileSystem.cpp  VirtualFileSystem.cpp  ZipFileSystem.cpp
lib/TbFsLib/test-utils/: CMakeLists.txt  README.md
lib/TbFsLib/test-utils/src/: TestEnvironment.cpp  TestUtils.cpp
lib/TbFsLib/test-utils/test/src/: tst_TestFileSystem.cpp
lib/TbFsLib/test/src/: tst_DiskFileSystem.cpp  tst_DiskIO.cpp  tst_FileSystem.cpp  tst_VirtualFileSystem.cpp
lib/UpdateLib/: README.md
lib/UpdateLib/src/: QtHttpClient.cpp
tmp_issue4725/mdc_testing-TBADDON/mdc_testing/: GameConfig.cfg  et_entities.fgd  mdc_testing.fgd
tmp_issue4725/mdc_testing-TBADDON/mdc_testing/assets/textures/: __TB_empty.tga
tmp_issue4725/mdc_testing/mdc_testing/main/maps/: mdc_testing.map
tmp_issue4725/mdc_testing/mdc_testing/main/models/powerups/ammo/: amcell.md3  (+1 more)
tmp_issue4725/mdc_testing/mdc_testing/main/scripts/: common.shader
tmp_issue4725/mdc_testing/mdc_testing/main/textures/: __TB_empty.tga
www/: downloads.php  header.php  index.php
(+1 files in other folders)
